# dfcoder

./: .gitignore  CLAUDE.md  Cargo.toml  integration_test.rs
crates/dfcoder-baml/: Cargo.toml
crates/dfcoder-baml/src/: activities.rs  classifier.rs  client.rs  lib.rs  schemas.rs
crates/dfcoder-core/: Cargo.toml
crates/dfcoder-core/src/: agents.rs  coordination.rs  lib.rs  retry.rs  supervision.rs
crates/dfcoder-daemon/: Cargo.toml
crates/dfcoder-daemon/src/: main.rs
crates/dfcoder-dsl/: Cargo.toml
crates/dfcoder-dsl/src/: agents.rs  behaviors.rs  conditions.rs  events.rs  lib.rs
crates/dfcoder-macros/: Cargo.toml
crates/dfcoder-macros/src/: agent.rs  baml.rs  events.rs  lib.rs  mcp.rs  scenario.rs
crates/dfcoder-mcp/: Cargo.toml
crates/dfcoder-mcp/src/: client.rs  lib.rs  protocol.rs  resources.rs  server.rs  transport.rs
crates/dfcoder-test-utils/: Cargo.toml
crates/dfcoder-test-utils/src/: agent_mock.rs  assertions.rs  lib.rs  pane_mock.rs  scenario.rs  supervisor_mock.rs  test_system.rs
crates/dfcoder-tui/: Cargo.toml
crates/dfcoder-tui/src/: lib.rs  main.rs
crates/dfcoder-types/: Cargo.toml
crates/dfcoder-types/src/: lib.rs
crates/dfcoder-zellij-plugin/: Cargo.toml
src/: main.rs
tests/: agent_system_tests.rs  baml_classification_tests.rs  dsl_examples.rs  end_to_end_integration_tests.rs  error_recovery_tests.rs  integration_test.rs  integration_verification_tests.rs  supervision_system_tests.rs  task_prioritization_tests.rs  test_framework_scenarios.rs  workshop_coordination_tests.rs
