[package]
name = "dfcoder-baml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "BAML integration for semantic activity categorization in DFCoder"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
dfcoder-types = { path = "../dfcoder-types" }
dfcoder-core = { path = "../dfcoder-core" }
dfcoder-macros = { path = "../dfcoder-macros" }

[dev-dependencies]
dfcoder-test-utils = { path = "../dfcoder-test-utils" }
tokio-test = "0.4"
wiremock = "0.5"