[package]
name = "dfcoder-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Background daemon service for DFCoder"

[[bin]]
name = "dfcoderd"
path = "src/main.rs"

[dependencies]
dfcoder-core.workspace = true
dfcoder-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
