[package]
name = "dfcoder-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for DFCoder DSLs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
darling = "0.20"
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild = "1.0"