[package]
name = "dfcoder-zellij-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Zellij plugin for DFCoder integration"

[lib]
crate-type = ["cdylib"]

[dependencies]
dfcoder-types.workspace = true
zellij-tile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_wasm_bindgen.workspace = true
